--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <h2>联系方式</h2>
             <p>项目负责人：Buck Qian</p>
             <p>发布日期：2025年3月6日</p>
-            <p>中华人民共和国 上海市 - Shanghai City,LIB Provisional Studio</p>
+            <p>中华人民共和国 上海市 - Shanghai City,People's Republic of China</p>
         </div>
     </div>
 
     <footer>
-        <p>© 2025 LIB临时工作室 | 特殊代表大会批准文件：202503/1/P/001</p>
+        <p>© 2025 LIB临时工作室 | 特殊代表大会批准文件：202503 / 1 / P / 001</p>
     </footer>
 </body>
 </html>
